--- a/style.css
+++ b/style.css
@@ -97,3 +97,19 @@ body {
     margin-top: 20px;
 }
 
+@media screen and (max-width: 600px) {
+   /* body{
+    height: 50vh;
+   } */
+    .container{
+        text-align: center;
+        width: 100%;
+        height: 100vh;
+        padding-top: 5pc;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+   
+}
+
